--- a/telco-customer-churn/analysis_nb.ipynb
+++ b/telco-customer-churn/analysis_nb.ipynb
@@ -79,7 +79,7 @@
     "imputer.transform(temp[:, :])\n",
     "dataset['TotalCharges'] = temp\n",
     "\n",
-    "#splitting in homogenius categories\n",
+    "#splitting in homogeneous categories\n",
     "cat_feat = list(dataset.columns)\n",
     "cat_feat.remove('tenure')\n",
     "cat_feat.remove('MonthlyCharges')\n",
@@ -88,28 +88,6 @@
     "\n",
     "num_feat = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
     "pred = 'Churn'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###### encoding\n",
-    "# from sklearn.preprocessing import LabelEncoder\n",
-    "# label_this = LabelEncoder()\n",
-    "# for col in dataset:\n",
-    "#     if col == 'customerID':\n",
-    "#         pass\n",
-    "#     elif col == 'tenure':\n",
-    "#         pass\n",
-    "#     elif col == 'MonthlyCharges':\n",
-    "#         pass\n",
-    "#     elif col == 'TotalCharges':\n",
-    "#         pass\n",
-    "#     else:\n",
-    "#         dataset[col] = label_this.fit_transform(dataset[col])"
    ]
   },
   {
@@ -842,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Note for reader:*** The inferences and graphs for numerical data have been removed for the time being. I ended up confusing myself too much while deriving meaning from the continuous data"
+    "***Note for reader:*** The inferences and graphs for numerical data have been removed for the time being. I ended up confusing myself too much while I was at it"
    ]
   },
   {
